# Minesweeper

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Cell.cpp.1CE6112653EB6454.idx  Cell.hpp.E7F7AE4F1F74042B.idx  main.cpp.7C4F1B1BABAAA1D5.idx
include/: Board.hpp  Cell.hpp
src/: Board.cpp  Cell.cpp  main.cpp
